--- a/css/common.css
+++ b/css/common.css
@@ -6,3 +6,6 @@ body{width:100%;height:100%;background-color:#fff;min-width: 1200px }
 .floatl{float: left;}
 .floatr{float: right;}
 .clear{clear:both;}
+.padl{padding-left: 23px;}
+.padl22{padding-left: 22px;}
+.padl45{padding-left: 45px;}
