--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 
 
 /* 头部*/
-.main{width: 86%;margin: 0 7% 50px} 
+.main{width: 1155px;margin: 0 auto} 
 .header{width:100%;height:85px;padding-top:21px}
 .heander_left{width:21%;height:59px;float: left;margin-bottom:26px;}
 .heander_right{width:79%;height:72px;float: left;margin-bottom:13px;}
@@ -25,36 +25,42 @@
 .center_bottom{width:90%;height:20px;margin-left:10%;}
 .center_bottom span a{color:#666666;font-size:16px;}
 .center_bottom span a:hover{color: #2bb8aa;text-decoration:underline}
-.center_top_left{width:76%;height:52px;float:left;}
+.center_top_left{height:52px;float:left;}
 .center_top_right{width:24%;height:52px;float:left;background-color:#fff;}
-.topnav{width:486px;height:40px;border:2px solid #2db8ad;}
-.topnav select{width:13%;height:40px;line-height:40px;background-color:#ffffff;color:#666666;font-size:15px;padding-left: 6px;float:left;border-right: 2px #dddddd solid;border-top:none;border-bottom:none;border-left: none; }
-.search{width:13%;height:40px;float:left;}
+.center_top_right img{width:196px;height:58px;margin-left:140px}
+.topnav{height:40px;border:2px solid #2db8ad;}
+.select{float: left;width: 62px;text-align: center;height: 40px;line-height: 40px;border-right:1px #A9A9A9 solid;cursor: pointer }
+.select ul{position: relative;color: #666666;}
+.select ul li[name="li1"]{width: 62px;height: 40px;}
+.select ul li[name="li2"]{width: 61px;height: 40px;background-color: white;z-index: 3000;border:1px #A9A9A9 solid;border-top: none;display: none}
+.search{width: 68px;height:40px;float: left;}
 .search input{width:100%;height:100%;background-color:#2bb8aa;color:#fff;border:none;}
 .action{color:#f76120;}
 .search input:hover{background-color:#00C3B0}
-.text{width:74%;height:40px;float:left;}
+.text{width: 355px;height:40px;float: left;}
 .text input{width:100%;height:40px;border:none;font-size:16px;font-family: "宋体";font-weight:500;}
 
 
 /* 中部 */
 .content{width:100%;height:517px;}
 /* 中部左侧*/
- .content_left{width:21%;height:517px;float:left;}
+ .content_left{width: 242px;height:517px;float:left;}
 .nav{width:94.1%;height:40px;background-color:#1caf9a;border-right:1px solid #1caf9a;color:#fff;line-height:40px;padding-left:5.7%;}
-.content p{width:93.8%;height:53px;background-color:#fafafa;border:1px solid #eeeeee;line-height:53px;padding-left:5.7%;color:black;font-size: 18px;font-weight:bold;}
-.nav_left{width:40%;height:53px;display:block;float:left;font-size:15px;font-family:"微软雅黑";}
+.content p{width:227px;height:53px;background-color:#fafafa;border:1px solid #eeeeee;line-height:53px;padding-left:5.7%;color:black;font-size: 18px;font-weight:bold;}
+.nav_left{width:91px;height:53px;display:block;float: left;font-size:15px;font-family:"微软雅黑";}
 .nav_left a{color:black;}
 .nav_left a:hover{color: #2bb8aa;}
-.nav_right{width:60%;height:53px;font-size:12px;display:block;float:left;text-align:right;color:#999999;font-family:"宋体";font-weight:100;}
-.nav_right a{color:#999999;}
+.nav_right{width:136px;height:53px;font-size:12px;display:block;float: left;text-align: right;color:#999999;font-family:"宋体";font-weight:100;}
+.nav_right a{color:#999999;display: block;}
+.left_nav b{float: right;padding:0 15px 0 7px;overflow: hidden;white-space:nowrap;font-weight:normal}
+.left_nav{overflow:hidden}
 .nav_right a:hover{color: #2bb8aa;}
-.content_right_top{width:100%;height:40px;background-color:#2bb8aa;line-height:40px;font-weight:bold;}
 .top_01{float:left;width: 9.6%;height:40px;text-align:center;}
 .top_02{float:left;width: 11.4%;height:40px;text-align:center;}
 
 /* 中部右侧*/
 .content_right{width:79%;float:left;}
+.content_right_top{width:100%;height:40px;background-color:#2bb8aa;line-height:40px;font-weight:bold;}
 .content_right_top a{color:#fff;}
 .content_right_top a:hover{color:#fff;background-color:#00C3B0;}
 .content_center_left{width: 78.4%;height:165px;float: left;position:relative;z-index: 5}
@@ -67,7 +73,7 @@
 .allarea{content: url(../image/meituan_04.jpg);}
 .hotsq{content: url(../image/meituan_06.jpg);}
 .filter{width:80%;height:18px;float:left;}
-.filter ul li{margin-right:20px;float:left;font-size:12px;height:18px;line-height:18px;color:#666666;}
+.filter ul li{margin-right:14px;float:left;font-size:12px;height:18px;line-height:18px;color:#666666;}
 .filter ul li a{color:#666666;}
 .filter ul li a:hover,.filter ul li a span:hover{color:#00C3B0;}
 
