第四次提交

--- a/css/common.css
+++ b/css/common.css
@@ -2,10 +2,10 @@
 a{text-decoration:none;}
 li{list-style:none;}
 body{width:100%;height:100%;background-color:#fff;min-width: 1200px }
-
+img{border:none;}
 .floatl{float: left;}
 .floatr{float: right;}
 .clear{clear:both;}
-.padl{padding-left: 23px;}
-.padl22{padding-left: 22px;}
-.padl45{padding-left: 45px;}
+.padl{padding-left: 14px;}
+.padl22{padding-left: 10px;}
+.padl45{padding-left: 39px;}
