--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 
 
 /* 头部*/
-.main{width: 1155px;margin: 0 auto} 
+.main{width: 1155px;margin: 0 auto;margin-bottom: 50px;} 
 .header{width:100%;height:85px;padding-top:21px}
 .heander_left{width:21%;height:59px;float: left;margin-bottom:26px;}
 .heander_right{width:79%;height:72px;float: left;margin-bottom:13px;}
@@ -42,7 +42,7 @@
 
 
 /* 中部 */
-.content{width:100%;height:517px;}
+.content{width:100%;height:517px;margin-bottom: 50px}
 /* 中部左侧*/
  .content_left{width: 242px;height:517px;float:left;}
 .nav{width:94.1%;height:40px;background-color:#1caf9a;border-right:1px solid #1caf9a;color:#fff;line-height:40px;padding-left:5.7%;}
@@ -51,7 +51,7 @@
 .nav_left a{color:black;}
 .nav_left a:hover{color: #2bb8aa;}
 .nav_right{width:136px;height:53px;font-size:12px;display:block;float: left;text-align: right;color:#999999;font-family:"宋体";font-weight:100;}
-.nav_right a{color:#999999;display: block;}
+.nav_right a{color:#999999;position: relative;left: 5px}
 .left_nav b{float: right;padding:0 15px 0 7px;overflow: hidden;white-space:nowrap;font-weight:normal}
 .left_nav{overflow:hidden}
 .nav_right a:hover{color: #2bb8aa;}
@@ -69,9 +69,6 @@
 .content_bottom_right{width: 21.3%;height:328px;float: left;border:1px solid #eeeeee;border-top:none;}
 .content_pal{width:95.4%;height:18px;background-color:#fff;padding:16px 0;border-bottom:1px solid #eeeeee;margin:0 2.3%;font-family:"宋体";}
 .label{width:68px;padding-left:8px;margin-right: 20px;float:left;}
-.hot{content: url(../image/meituan_03.jpg);}
-.allarea{content: url(../image/meituan_04.jpg);}
-.hotsq{content: url(../image/meituan_06.jpg);}
 .filter{width:80%;height:18px;float:left;}
 .filter ul li{margin-right:14px;float:left;font-size:12px;height:18px;line-height:18px;color:#666666;}
 .filter ul li a{color:#666666;}
@@ -123,26 +120,13 @@ top: 0;left: 0;}
 #container .pointer ul li{float:left;width: 10px;height: 10px;border-radius: 10px;background:#fff;margin: 0 5px;cursor: pointer;}
 #container .pointer .thistitle{background: #69aaec;}
 
- .arrow {
-            position: absolute;
-            top: 180px;
-            z-index: 2;
-            display: none;
-            width: 40px;
-            height: 40px;
-            font-size: 36px;
-            font-weight: bold;
-            line-height: 39px;
-            text-align: center;
-            color: #fff;
-            background-color: RGBA(0, 0, 0, 0.3);
-            cursor: pointer;
-        }
-        
-        .arrow:hover {
-            background-color: RGBA(0, 0, 0, 0.7);
-        }
-        
-        #container:hover .arrow {
-            display: block;
-        }
+.arrow {position: absolute;top: 180px;z-index: 2; display: none; width: 40px;height: 40px;font-size: 36px; font-weight: bold;line-height: 39px;text-align: center;color: #fff;background-color: RGBA(0, 0, 0, 0.3); cursor: pointer; }
+.arrow:hover {background-color: RGBA(0, 0, 0, 0.7); }
+#container:hover .arrow { display: block;}
+
+/* 中间主体内容 */
+aside{width:100%;}
+.countdown{width: 100%;height: 47px;}
+.countdown span{width: 227px;height: 42px;border: 1px #eee solid;display:inline-block;border-radius:3px;}
+.countdown span a{background: url(../image/s1.meituan.png) no-repeat;background-position: -49px 0px;width: 49px;height: 28px;position: absolute;margin-top:7px;margin-left: 7px;}
+#retroclockbox1{margin-left: 60px;margin-top:4px}
