--- a/css/index.css
+++ b/css/index.css
@@ -125,8 +125,20 @@ top: 0;left: 0;}
 #container:hover .arrow { display: block;}
 
 /* 中间主体内容 */
-aside{width:100%;}
-.countdown{width: 100%;height: 47px;}
+article{width:100%;}
+.countdown{width: 100%;height: 47px;margin-bottom:10px;}
 .countdown span{width: 227px;height: 42px;border: 1px #eee solid;display:inline-block;border-radius:3px;}
 .countdown span a{background: url(../image/s1.meituan.png) no-repeat;background-position: -49px 0px;width: 49px;height: 28px;position: absolute;margin-top:7px;margin-left: 7px;}
 #retroclockbox1{margin-left: 60px;margin-top:4px}
+.deal-total{width:100%;height:260px;border: 1px #eee solid}
+.deal-tile{width:200px;height: 100%;border-right:1px #eee solid;padding:0 15px;position:relative;}
+.deal-tile img{width:200px;height: 125px; margin-bottom:20px;margin-top:15px;}
+.deal-mark2{position:absolute;top:12px;}
+.deal-mark-dai{background: url(../image/s1.meituan.png) no-repeat;background-position: 0 -619px;width:45px;height: 40px;float: left;margin-left:-5px;}
+.deal-mark-mian{background: url(../image/s1.meituan.png) no-repeat;background-position: 0 -451px;width:45px;height: 40px;float: left;margin-left:-5px;}
+.deal-mark-tao{background: url(../image/s1.meituan.png) no-repeat;background-position: 0 -493px;width:45px;height: 40px;float: left;margin-left:-5px;}
+.deal-tile a{text-decoration: none;color:#7d7d7d;font-size: 14px;font-weight:bold;overflow:hidden;}
+.deal-tile p{margin-top:12px;color: #f76120;font-weight:bold;float: left;}
+.deal-tile i{margin-top:12px;float: left;color: #999;margin-left: 100px;font-style:normal;font-size: 13px;font-weight: bold;}
+.deal-tile-bottom{width:100%;margin-top:40px;border-top: 1px #eee dotted;padding-top:10px;}
+.deal-tile-bottom span{height: 16px;background-color: #f76120;color:white;font-size:12px;line-height:12px;display: block;width:110px;line-height:16px;text-align:center;}
