--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,7 @@ article{width:100%;}
 .deal-total{width:100%;height:260px;border: 1px #eee solid}
 .deal-tile{width:200px;height: 100%;border-right:1px #eee solid;padding:0 15px;position:relative;}
 .deal-tile img{width:200px;height: 125px; margin-bottom:20px;margin-top:15px;}
-.deal-mark2{position:absolute;top:12px;}
+.deal-mark2{position:absolute;top:12px;left:15px;}
 .deal-mark-dai{background: url(../image/s1.meituan.png) no-repeat;background-position: 0 -619px;width:45px;height: 40px;float: left;margin-left:-5px;}
 .deal-mark-mian{background: url(../image/s1.meituan.png) no-repeat;background-position: 0 -451px;width:45px;height: 40px;float: left;margin-left:-5px;}
 .deal-mark-tao{background: url(../image/s1.meituan.png) no-repeat;background-position: 0 -493px;width:45px;height: 40px;float: left;margin-left:-5px;}
@@ -166,3 +166,8 @@ footer{width:100%;margin-top: 18px;border-top:4px #eee double;padding-top: 20px;
 .rules p a{color: #999;font-size: 12px;}
 .rules img{position:relative;top:5px;padding-left:3px;}
 .end{margin-top:20px;padding-bottom:58px;}
+
+#share {position:fixed;_position:absolute;_top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight)-34+"px");bottom:34px;left:95%;width:30px;zoom:1;}
+#share a{background-image:url(../image/share.png); background-repeat:no-repeat; display:block; width:30px; height:30px; margin-bottom:2px; overflow:hidden; text-indent:-999px;-webkit-transition: all 0.2s ease-in-out;-moz-transition: all 0.2s ease-in-out;-o-transition: all 0.2s ease-in-out;-ms-transition: all 0.2s ease-in-out;transition: all 0.2s ease-in-out;}
+#share a#totop{background-position:0 -120px;position:absolute;bottom:64px;cursor:pointer;}
+#share a#totop:hover {background-position:-30px -120px;}
